# hadron2np

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/hadron2np/: DecayProcess.py  Phase_space_factors.py  __init__.py  init_parameters.py  methods.py
src/hadron2np/DLEFT/: __init__.py  conventions.yaml
src/hadron2np/data/: config.yaml  hadron_matrix_metadata.yaml  parameters.yaml  parameters_metadata.yaml  pdg_particle.yaml
src/hadron2np/physics/dm_fermion/: DLEFT_B_0_2_0_1_1.py  DLEFT_B_0_2_0_1_2.py  DLEFT_B_0_2_0_1_3.py  DLEFT_B_P_3_1_1_1.py  DLEFT_B_P_3_1_1_2.py  DLEFT_B_P_3_1_1_3.py  DLEFT_B_V_3_1_1_1.py  DLEFT_B_V_3_1_1_2.py  DLEFT_B_V_3_1_1_3.py  DLEFT_Lb_L_3_1_1_1.py  DLEFT_Lb_L_3_1_1_2.py  DLEFT_Lb_L_3_1_1_3.py  DLEFT_width.py
src/hadron2np/physics/dm_scalar/: DLEFT_All.py  DLEFT_B_0.py  DLEFT_B_0_2_0_1.py  DLEFT_B_P_2_1_1.py  DLEFT_B_P_3_1_1.py  DLEFT_B_V_2_1_1.py  DLEFT_B_V_3_1_1.py  DLEFT_Lb_L_3_1_1.py  DLEFT_width.py
src/hadron2np/physics/dm_vector/: DLEFT_B_0.py  DLEFT_B_0_2_0_1.py  DLEFT_B_P.py  DLEFT_B_P_2_1_1.py  DLEFT_B_P_3_1_1.py  DLEFT_B_V.py  DLEFT_B_V_2_1_1.py  DLEFT_B_V_3_1_1.py  DLEFT_Lb_L_3_1_1.py  DLEFT_width.py
src/hadron2np/physics/sm_invisible/: B_Hvv.py  Lb_Lvv.py  __init__.py  sm_width.py
tests/: test_B_decay_process.py  test_LambdaB_decay_process.py  test_hadron2np.ipynb
